--- a/source/music/index.html
+++ b/source/music/index.html
@@ -1,68 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang=zh-CN>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="/dist/APlayer.min.css">
-    <title>音乐🎵</title>
+    <meta charset=utf-8>
+    <meta http-equiv=X-UA-Compatible content="IE=edge">
+    <title>晨黎音乐</title>
+    <script>var coverSupport = 'CSS' in window && typeof CSS.supports === 'function' && (CSS.supports('top: env(a)') || CSS.supports('top: constant(a)'))
+        document.write('<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0' + (coverSupport ? ', viewport-fit=cover' : '') + '" />')</script>
+    <link rel=stylesheet href=./static/index.a5c69d49.css>
 </head>
-
-<body>
-    <style>
-        #search {
-            position: absolute;
-            width: 98%;
-            height: 50px;
-            top: 5px;
-        }
-    </style>
-
-    <div id="aplayer"></div>
-
-    <input id="search" type="text" onkeydown="onKeyDown(event)" placeholder="按Enter键搜索" />
-
-
-    <script type="text/javascript" src="/dist/APlayer.min.js"></script>
-
-    <script type="text/javascript">
-        async function onKeyDown(event) {
-            var e = event || window.event || arguments.callee.caller.arguments[0];
-            if (e && e.keyCode == 13) { // enter 键
-                var searchValue = window.document.getElementById("search").value;
-                var audioRes = await axios.get(
-                    'https://netease-cloud-music-api-i0on4wcqj-attractive-boy.vercel.app/search?keywords=' +
-                    searchValue);
-                    var audios = [];
-                    for (var i = 0; i < 30; i++) {
-                        var song = new Object();
-                        song['name']=audioRes.data.result.songs[i].name;
-                        song['url']="https://music.163.com/song/media/outer/url?id=" + audioRes.data.result.songs[i].id + ".mp3";
-                        song['artist'] = ' ';
-                        audios.push(song);
-                    }
-                    while(audioRes.status != 200);
-                    new APlayer({
-                        container: document.getElementById('aplayer'), //播放器容器元素
-                        mini: false, //迷你模式
-                        autoplay: false, //自动播放
-                        theme: '#FADFA3', //主题色
-                        loop: 'all', //音频循环播放, 可选值: 'all'全部循环, 'one'单曲循环, 'none'不循环
-                        order: 'random', //音频循环顺序, 可选值: 'list'列表循环, 'random'随机循环
-                        preload: 'auto', //预加载，可选值: 'none', 'metadata', 'auto'
-                        volume: 0.7, //默认音量，请注意播放器会记忆用户设置，用户手动设置音量后默认音量即失效
-                        mutex: true, //互斥，阻止多个播放器同时播放，当前播放器播放时暂停其他播放器
-                        listFolded: false, //列表默认折叠
-                        listMaxHeight: 90, //列表最大高度
-                        lrcType: 3, //歌词传递方式
-                        audio : audios,
-                    });
-            }
-        }
-    </script>
-
+<style>
+    body{
+        overflow: hidden;
+    }
+</style>
+<body><noscript><strong>Please enable JavaScript to continue.</strong></noscript>
+    <div id=app></div>
+    <script src=./static/js/chunk-vendors.329a6bda.js></script>
+    <script src=./static/js/index.74b35d18.js></script>
 </body>
 
 </html>
